@@ -1,3 +1,6 @@
+20 January 2012: Wouter
+	- Fix bug #430: segfault when MAX_INTERFACES set to more than 65K.
+
 12 January 2012: Matthijs
         - Fix bug #421: truncate pidfile on shutdown, before unlink.
 
